--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ function startres() {
 
      if (w<500) { 
         bodyContainer.style.height = `1277px`;
+        bodyContainer.style.width = w;
         m = document.getElementsByClassName('m');
         for (i=0; i<m.length; i++) {
         m[i].style.height = '165px';  }   
